[FIX] fivealive theme: avoid bg contrast issue when topbar_modules menu wraps on two lines and better positioning of the search module there
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/12.x@50415 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/fivealive.css
+++ b/styles/fivealive.css
@@ -75,12 +75,15 @@ body.fixed_width .fixedwidth {
 }
 
 #topbar_modules {
+	background: url("fivealive/topbar.jpg") repeat-x scroll 0 0 rgba(0, 0, 0, 1);
+	border-radius: 0.4rem;
+	color: #fff;
 	min-height: 55px;
 }
 
 #topbar_modules .box-search {
 	position: absolute;
-	top: 13px;
+	bottom: 13px;
 	right: 10px;
 }
 
